[tool.poetry]
name = "page-graph-tests"
version = "0.1.0"
description = "Automated test suite for Brave Page Graph"
authors = [
  "Quan Chen <mail@quanium.org>",
  "Alexander Sjösten <sjosten@chalmers.se>",
  "Michael Smith <michael@spinda.net>"
]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^0.4.0"
aiohttp = "^3.5.4"
chromewhip = "^0.3.1"
colorama = "^0.4.1"
networkx = "^2.3"

[tool.poetry.dev-dependencies]
lavender = "^0.1.0"

[tool.lavender]
target-version = ["py37"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
